src/objects/dd__c.object
<CustomObject>
    <description>Human: can have address, name.</description>
    <fields>
        <fullName>Custom_Field__c</fullName>
        <description>Custom Field with length 20</description>
        <inlineHelpText>Help Text: Custom Field with length 20</inlineHelpText>
        <label>Custom Field 20</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescribeRH__c</fullName>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>DescribeRHs</relationshipLabel>
        <relationshipName>DescribeRHChildRName_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MyAsset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Humans (Asset)</relationshipLabel>
        <relationshipName>Humans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Humans</relationshipLabel>
        <relationshipName>Humans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomeRandomName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Humans</relationshipLabel>
        <relationshipName>DD_LookUP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Human</label>
    <nameField>
        <label>Human Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Humans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>never_badName</fullName>
        <active>true</active>
        <description>&apos;badName&apos; is bad, don&apos;t allow it</description>
        <errorConditionFormula>Name  &lt;&gt; &apos;badName&apos;</errorConditionFormula>
        <errorMessage>The name &apos;badName&apos; is bad, we all know it.</errorMessage>
    </validationRules>
</CustomObject>